Archive2/d4/1171f713fd21e4/output
main.cpp:14:3: error: call to implicitly-deleted default constructor of 'U'
U u;
  ^
main.cpp:11:7: note: default constructor of 'U' is implicitly deleted because variant field 'a' has a non-trivial default constructor
    A a;
      ^
1 error generated.
