Archive2/d4/1171f713fd21e4/main.cpp
#include <iostream>
#include <limits>

struct A
{
    A(){ std::cout << "A()" << std::endl; }
};

union U
{
    A a;
};

U u;

int main()
{

}

